static/css/styling.css
body {
	background-color: #111;
	margin: 10px
}

.center {
	position: absolute;
	left: 50%;
	transform: translateX(-50%);
	padding: 10px
}

input[type=submit],input[type=submit]:hover,text,textarea {
	-webkit-tap-highlight-color: transparent;
	box-sizing: border-box;
	margin: 0
}

text {
	line-height: 24px;
	vertical-align: baseline;
	position: relative;
	color: #ccc;
	font-size: 1em;
	border-bottom: none;
	padding: 0 0 5px
}

input[type=submit],input[type=submit]:hover,textarea {
	font: inherit;
	outline: 0;
	border-radius: 3px;
	font-size: 13px
}

input[type=submit],input[type=submit]:hover,text {
	font-family: segoe ui,trebuchet MS,Lucida Sans Unicode,Lucida Sans,Sans-Serif;
	font-weight: 600
}

input[type=submit],input[type=submit]:hover {
	overflow: visible;
	text-transform: none;
	white-space: nowrap;
	vertical-align: middle;
	touch-action: manipulation;
	background-image: none;
	user-select: none;
	text-align: center;
	text-decoration: none;
	border: 0;
	background-color: #222;
	border-bottom: 2px solid #1a1a1a;
	color: #fff;
	cursor: pointer;
	display: inline-block;
	min-width: 73px;
	height: 35px;
	line-height: 34px;
	padding: 0 25px
}

input[type=submit]:hover {
	opacity: .8
}

textarea {
	color: #9e9e9e;
	resize: none;
	background-color: #131313;
	border: 1px solid #222;
	box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
	display: block;
	font-family: Consolas,Menlo,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,monospace,serif;
	min-height: 200px;
	line-height: 21px;
	width: 50vw;
	padding: 8px 12px;
	overflow: visible;
	overflow-wrap: break-word;
	height: 300px
}

